--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
                     </div>
                     <div class="about__items">
                         <ul class="about__links">
-                            <li class="about__link">Домой</li>
-                            <li class="about__link">Инфо</li>
-                            <li class="about__link">Контакты</li>
-                        </ul>   
+                            <li class="about__link">
+                                <a
+                                    href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
+                                    >Домой</a
+                                >
+                            </li>
+                            <li class="about__link">
+                                <a
+                                    href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
+                                    >Инфо</a
+                                >
+                            </li>
+                            <li class="about__link">
+                                <a
+                                    href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
+                                    >Контакты</a
+                                >
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="about__row">
