--- a/index.html
+++ b/index.html
@@ -6,35 +6,40 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
+        <img class="image"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROo5shsLx5SVjVplJj55ehtbRDBrYpZ58dsQ&usqp=CAU"
+            alt=""
+        />
         <div class="about">
             <div class="about__body">
                 <div class="about__header">
-                    <div class="about__title title">ABOUT</div>
+                    <div class="about__title title">Про нас</div>
                     <div class="about__text">
-                        We specialize in contemporary, functional, and stunning
-                        websites with design that really brings that "WOW"
-                        factor. In our design process, we make sure to stay one
-                        step ahead of the latest trends, never forgetting to
-                        abide by key web standards.
+                        Ми спеціалізуємося на сучасному, функціональному та
+                        приголомшливому веб-сайти з дизайном, який справді
+                        приносить "WOW" фактор. У нашому процесі проектування ми
+                        дбаємо про те, щоб залишатися єдиними крокуйте попереду
+                        останніх тенденцій, не забуваючи про це дотримуватися
+                        основних веб-стандартів.
                     </div>
                     <div class="about__items">
                         <ul class="about__links">
                             <li class="about__link">
                                 <a
                                     href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
-                                    >Домой</a
+                                    >Додому</a
                                 >
                             </li>
                             <li class="about__link">
                                 <a
                                     href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
-                                    >Инфо</a
+                                    >Інфо</a
                                 >
                             </li>
                             <li class="about__link">
                                 <a
                                     href="https://www.youtube.com/watch?v=NY9oc2bOUnQ"
-                                    >Контакты</a
+                                    >Контакти</a
                                 >
                             </li>
                         </ul>
@@ -48,8 +53,8 @@
                             </div>
                             <div class="item-about__title">WEB</div>
                             <div class="item-about__text">
-                                We tend to deliver unique and functional design,
-                                through innovation and creativity.
+                                Ми прагнемо створити унікальний і функціональний
+                                дизайн, через інновації та творчість.
                             </div>
                         </div>
                     </div>
@@ -60,9 +65,9 @@
                             </div>
                             <div class="item-about__title">iOS AND ANDROID</div>
                             <div class="item-about__text">
-                                We seek to bring new businesses and customers
-                                closer together through valuable insights and
-                                proper targeting.
+                                Ми прагнемо залучати нових компаній і клієнтів
+                                ближче разом через цінні ідеї та правильне
+                                націлювання.
                             </div>
                         </div>
                     </div>
@@ -73,9 +78,9 @@
                             </div>
                             <div class="item-about__title">MARKETING</div>
                             <div class="item-about__text">
-                                We’ll help you establish the right goals and
-                                build the right paths. Success depends on
-                                setting the right intention.
+                                Ми допоможемо вам встановити правильні цілі та
+                                будувати правильні шляхи. Успіх залежить від
+                                встановлення правильного наміру.
                             </div>
                         </div>
                     </div>
